Snap 1523 (#608)
* [SNAP-1427] Reduce garbage in column allocators

- replaced ColumnData structure with ByteBuffer and added two flavours of allocators
  for those: HeapBufferAllocator and DirectBufferAllocator where latter is now used for expanding data
- use HeapBufferAllocator for final data trimming (if required) in embedded/local mode
  so region can store it directly without any additional copying (this should change
      to the store setting when we enable off-heap in storage layer)
- instead of wrapping incoming UTF8String as StringIndexKey into the ObjectHashSet for dictionary,
  now StringIndexKey only keeps its data and throws away the UTF8String itself
  to reduce the possibility of promotion of UTF8Strings that were read from external source
- replaced mutable HashMap with TIntObjectHashMap in JDBCSourceAsStore iterator
- check for type in SnappyTableStatsProviderService to fix a ClassCastException seen in
  VM restarts (after being thrown out due to long GC pause) where it says that CompactCompositeRegionKey
  cannot be cast to byte[][]; its still not clear how a CompactCompositeRegionKey is
  being returned by the iterator so the check is only a workaround for now

* Use flat ByteBuffer for dictionary key data

Instead of separate key UTF8String objects with own data, use a flat ByteBuffer
with sizes at start just like it is laid out in the final encoded dictionary
portion of the column. In "finish" just copy the whole dictionary to final column data.

* Correcting StringKey to point to the current offset

The offset member variable in StringKey is incorrect since that absolute offset
can change after reallocation of the underlying direct ByteBuffer. Hence
it now stores the relative offset and reference to the DictionaryData holder
(which is StringInit) to get the base absolute offset.

* make a clone of StringKey for MIN/MAX limits

previous code would store a UTF8String.fromAddress but that address of dictionary
dat